# l1x-templ-cross-chain-swap

./: .gitignore  Cargo.toml  devbox.json  docker-compose.yml  process-compose.yaml
eth-contracts/: README.md  hardhat.config.js  package-lock.json  package.json
eth-contracts/contracts/: L1XAdvertisementMultiSig.sol  L1XNFT.sol  L1XOpenSeaWallet.sol
eth-contracts/scripts/: mint.js
l1x-conf/: casandra.env  config-contract-address-registry.yaml
l1x-conf/scripts/: 010-01-uc-cc-swap-deploy.json  010-01-uc-deploy-xtalk-flow-control.json  010-02-uc-deploy-source-registry.json  011-01-uc-init-xtalk-flow-control.json  011-02-uc-init-source-registry.json  012-01-uc-event-registry-register-new-source.json  012-02-uc-event-registry-get-source-from.json
l1x-contracts/cross-chain-swap/: Cargo.toml  build.sh
l1x-contracts/cross-chain-swap/src/: lib.rs
l1x-contracts/source_registry/: Cargo.toml
l1x-contracts/source_registry/src/: lib.rs
l1x-contracts/xtalk_swap_flow/: Cargo.toml
l1x-contracts/xtalk_swap_flow/src/: lib.rs
