[package]
name = "source_registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = { version = "0.9", features = ["const-generics"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }

l1x-sdk = { version = "0.2.1", git = "https://github.com/L1X-Foundation-Consensus/l1x-templ-sdk.git", package = "l1x-sdk" }
